discussion/kv_engine/178716/178716_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

Modernize parse_config [1/2]

Use a std::string view for the input string and make
it callback based instead.

Change-Id: I74f34fb4bf9959029589c199c1b1444a97df2a89

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-08-11 05:02:27.000000000
Message: 
Uploaded patch set 5.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-08-11 05:23:14.000000000
Message: 
Patch Set 5: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19369/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/config_parser.h:90:12: warning: do not declare C-style arrays, use std::array<> instead [modernize-avoid-c-arrays]
           config_item items[],
           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/config_parser.cc:20:9: warning: do not declare C-style arrays, use std::array<> instead [modernize-avoid-c-arrays]
        config_item items[],
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/config_parser.cc:23:24: error: no member named "io" in namespace "cb" [clang-diagnostic-error]
    auto content = cb::io::loadFile(fname, std::chrono::microseconds{});
                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/config_parser.cc:185:58: error: use of undeclared identifier "fmt" [clang-diagnostic-error]
                             throw std::invalid_argument(fmt::format(
                                                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/config_parser.cc:192:55: error: use of undeclared identifier "fmt" [clang-diagnostic-error]
                             throw std::runtime_error(fmt::format(
                                                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/config_parser.cc:212:13: error: use of undeclared identifier "fmt" [clang-diagnostic-error]
            fmt::print(error, "Unsupported key: <{}>\n", key);
            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/config_parser.cc:219:13: error: use of undeclared identifier "fmt" [clang-diagnostic-error]
            fmt::print(
            ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19369/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/config_parser.cc:23:24:
error: no member named "io" in namespace "cb" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19369/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48255/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/utilities/config_parser.cc(164): error C3861: "strcasecmp": identifier not found ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48255/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40536/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/utilities/config_parser.cc:23:24:
error: no member named "io" in namespace "cb"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40536/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9059/ : FAILURE

Compile error at [2022-08-11T05:03:16.680Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/utilities/config_parser.cc:185:58:
error: use of undeclared identifier "fmt"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9059/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22379/ : FAILURE

Compile error at [2022-08-11T05:04:59.953Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/utilities/config_parser.cc:185:58:
error: use of undeclared identifier "fmt"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22379/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21655/ : FAILURE

Compile error at [2022-08-11T05:04:28.981Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/utilities/config_parser.cc:185:58:
error: ?fmt? was not declared in this scope; did you mean ?fma??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21655/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20551/ : FAILURE

Failure of GoogleTest "TransportProtocols/RangeScanTest.CreateCancel/McbpSsl_XattrYes_JsonYes_SnappyYes":

<pre>
[ RUN      ] TransportProtocols/RangeScanTest.CreateCancel/McbpSsl_XattrYes_JsonYes_SnappyYes
[2022-08-11T05:22:53.293Z] unknown file: Failure
[2022-08-11T05:22:53.293Z] C++ exception with description "MemcachedConnection::recvFrame(): Timed out after waiting 2000ms for a response" thrown in the test body.
[2022-08-11T05:22:53.293Z] [  FAILED  ] TransportProtocols/RangeScanTest.CreateCancel/McbpSsl_XattrYes_JsonYes_SnappyYes, where GetParam() = (McbpSsl, XattrYes, 4-byte object <00-00 00-00>, 4-byte object <00-00 00-00>) (2018 ms)
TransportProtocols/RangeScanTest.CreateCancel/McbpSsl_XattrYes_JsonYes_SnappyYes
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20551/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21305/ : FAILURE

Compile error at [2022-08-11T05:05:05.355Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/utilities/config_parser.cc:185:58:
error: ?fmt? was not declared in this scope; did you mean ?fma??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21305/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29683/ : FAILURE

Compile error at [2022-08-11T05:04:40.919Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/utilities/config_parser.cc:185:58:
error: use of undeclared identifier "fmt"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29683/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9156/ : FAILURE

Compile error at [2022-08-11T05:06:37.050Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master@2/kv_engine/utilities/config_parser.cc:185:58:
error: ?fmt? was not declared in this scope; did you mean ?fma??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9156/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/18581/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
